// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders with custom height 1`] = `
<svg
  className="ax-icon ax-icon--twitter"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "height": "4rem",
      "width": undefined,
    }
  }
  viewBox="0 0 16 16"
/>
`;

exports[`Icon renders with custom size 1`] = `
<svg
  className="ax-icon ax-icon--twitter"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "height": "4rem",
      "width": "4rem",
    }
  }
  viewBox="0 0 16 16"
/>
`;

exports[`Icon renders with custom width 1`] = `
<svg
  className="ax-icon ax-icon--twitter"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "height": undefined,
      "width": "4rem",
    }
  }
  viewBox="0 0 16 16"
/>
`;

exports[`Icon renders with defaultProps 1`] = `
<svg
  className="ax-icon ax-icon--twitter"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "height": "1rem",
      "width": "1rem",
    }
  }
  viewBox="0 0 16 16"
/>
`;

exports[`Icon renders with inline 1`] = `
<svg
  className="ax-icon ax-icon--twitter ax-icon--inline"
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  style={
    Object {
      "height": "1rem",
      "width": "1rem",
    }
  }
  viewBox="0 0 16 16"
/>
`;
